--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<header class="major">
 							<h2>Portfolio</h2>
 						</header>
-						<p>Actuellement en classe de 3ème je souhaite passer un bac ST2DA afin de faire des études dans le domaine de l'art numérique.</p>
+						<p>Actuellement en classe de 3ème je souhaite passer un bac STD2A afin de faire des études dans le domaine de l'art numérique.</p>
 					</section>
 
 				<!-- Two -->
@@ -49,6 +49,11 @@
 								<h3>Femme éclairée</h3>
 								<p>Travail réalisé avec modèle sur un papier cartonné noir</p>
 							</article>
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/Alone.png" class="image fit thumb"><img src="images/Alone.png" alt="" /></a>
+								<h3>Alone</h3>
+								<p>Travail réalisé à la tablette graphique</p>
+							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Lucy0002.png" class="image fit thumb"><img src="images/Lucy0002.png" alt="" /></a>
 								<h3>Lucy</h3>
@@ -59,7 +64,7 @@
 								<h3>Homme à la peau mate</h3>
 								<p>Travail réalisé aux feutres à l'alcool avec modèle</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/Etang sauvage0003.png" class="image fit thumb"><img src="images/Etang sauvage0003.png" alt="" /></a>
 								<h3>Etang sauvage</h3>
 								<p>Travail réalisé inspiré du tableau "Les Nymphéas"</p>
@@ -84,11 +89,6 @@
 								<h3>The Devil's bridge</h3>
 								<p>Travail réalisé à la tablette graphique avec modèle</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Alone.png" class="image fit thumb"><img src="images/Alone.png" alt="" /></a>
-								<h3>Alone</h3>
-								<p>Travail réalisé à la tablette graphique</p>
-							</article>
 						</div>
 						<h2>Corps dénudés</h2>
 						<div class="row">
@@ -108,13 +108,13 @@
 								<p>Travail réalisé au crayon de bois avec modèle</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/image1.jpg" class="image fit thumb"><img src="images/image1.jpg" alt="" /></a>
-								<h3>Femme nue</h3>
+								<a href="images/Femme nue acroupie.jpg" class="image fit thumb"><img src="images/Femme nue acroupie.jpg" alt="" /></a>
+								<h3>Femme nue acroupie</h3>
 								<p>Travail réalisé au crayon de bois avec modèle</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Femme nue acroupie.jpg" class="image fit thumb"><img src="images/Femme nue acroupie.jpg" alt="" /></a>
-								<h3>Femme nue acroupie</h3>
+								<a href="images/image1.jpg" class="image fit thumb"><img src="images/image1.jpg" alt="" /></a>
+								<h3>Femme nue</h3>
 								<p>Travail réalisé au crayon de bois avec modèle</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
