--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Carpe.png" class="image fit thumb"><img src="images/Carpe.png" alt="" /></a>
 								<h3>Carpe</h3>
-								<p>Travail réalisé sur papier aux crayonx de bois gras et secs</p>
+								<p>Travail réalisé sur papier aux crayons de bois gras et secs</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/E-girl.png" class="image fit thumb"><img src="images/E-girl.png" alt="" /></a>
