--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" type="image/png" href="images/Moi.avatar.png"/>
 	</head>
 	<body class="is-preload">
 
@@ -138,6 +139,48 @@
 								<a href="images/diable.png" class="image fit thumb"><img src="images/diable.png" alt="" /></a>
 								<h3>The Devil's bridge</h3>
 								<p>Travail réalisé à la tablette graphique avec modèle</p>
+							</article>
+							<article class="col-4 col-12-xsmall work-item">
+								<a href="images/Esprit de la foret.jpg" class="image fit thumb"><img src="images/Esprit de la foret.jpg" alt="" /></a>
+								<h3>Esprit de la forêt</h3>
+								<p>Travail réalisé à la tablette graphique</p>
+							</article>
+							<article class="col-8 col-12-xsmall work-item">
+								<a href="images/IMG_8256.jpg" class="image fit thumb"><img src="images/IMG_8256.jpg" alt="" /></a>
+								<h3>Planète colorée</h3>
+								<p>Travail réalisé à la tablette graphique</p>
+							</article>
+						<h2>Autres</h2>
+						<div class="row">
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/aqueduc.jpg" class="image fit thumb"><img src="images/aqueduc.jpg" alt="" /></a>
+								<h3>Aqueduc</h3>
+								<p>Travail réalisé à l'aquarelle</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/Nymphe des eaux.jpg" class="image fit thumb"><img src="images/Nymphe des eaux.jpg" alt="" /></a>
+								<h3>Nymphe</h3>
+								<p>Travail réalisé à l'aquarelle</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/petite e girl.jpg" class="image fit thumb"><img src="images/petite e girl.jpg" alt="" /></a>
+								<h3>E-girl n2</h3>
+								<p>Travail réalisé aux feutres</p>
+							</article>
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/Voyante0012.png" class="image fit thumb"><img src="images/Voyante0012.png" alt="" /></a>
+								<h3>Voyante</h3>
+								<p>Travail réalisé au crayon de bois</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/peinture jour.jpg" class="image fit thumb"><img src="images/peinture jour.jpg" alt="" /></a>
+								<h3>Peinture jour</h3>
+								<p>Travail réalisé à la gouache</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/peinture nuit.jpg" class="image fit thumb"><img src="images/peinture nuit.jpg" alt="" /></a>
+								<h3>Peinture nuit</h3>
+								<p>Travail réalisé à la gouache</p>
 							</article>
 						</div>
 					</section>
