--- a/index.html
+++ b/index.html
@@ -38,59 +38,6 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Travaux sélectionnés pour la présentation de la Joliverie</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/image1.jpg" class="image fit thumb"><img src="images/image1.jpg" alt="" /></a>
-								<h3>Femme nue</h3>
-								<p>Travail réalisé au crayon de bois avec modèle</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Femme à la lumière.png" class="image fit thumb"><img src="images/Femme à la lumière.png" alt="" /></a>
-								<h3>Femme éclairée</h3>
-								<p>Travail réalisé avec modèle sur un papier cartonné noir</p>
-							</article>
-							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/Alone.png" class="image fit thumb"><img src="images/Alone.png" alt="" /></a>
-								<h3>Alone</h3>
-								<p>Travail réalisé à la tablette graphique</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Lucy0002.png" class="image fit thumb"><img src="images/Lucy0002.png" alt="" /></a>
-								<h3>Lucy</h3>
-								<p>Travail réalisé avec modèle aux feutres à l'alcool</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Colo.png" class="image fit thumb"><img src="images/Colo.png" alt="" /></a>
-								<h3>Homme à la peau mate</h3>
-								<p>Travail réalisé aux feutres à l'alcool avec modèle</p>
-							</article>
-							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/Etang sauvage0003.png" class="image fit thumb"><img src="images/Etang sauvage0003.png" alt="" /></a>
-								<h3>Etang sauvage</h3>
-								<p>Travail réalisé inspiré du tableau "Les Nymphéas"</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Carpe.png" class="image fit thumb"><img src="images/Carpe.png" alt="" /></a>
-								<h3>Carpe</h3>
-								<p>Travail réalisé sur papier aux crayons de bois gras et secs</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/E-girl.png" class="image fit thumb"><img src="images/E-girl.png" alt="" /></a>
-								<h3>E-girl</h3>
-								<p>Travail réalisé aux feutres à l'alcool</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Rue passante.png" class="image fit thumb"><img src="images/Rue passante.png" alt="" /></a>
-								<h3>Rue passante</h3>
-								<p>Travail réalisé au crayon de bois humidifié puis étalé à l'eau</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/diable.png" class="image fit thumb"><img src="images/diable.png" alt="" /></a>
-								<h3>The Devil's bridge</h3>
-								<p>Travail réalisé à la tablette graphique avec modèle</p>
-							</article>
-						</div>
 						<h2>Corps dénudés</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
@@ -125,6 +72,11 @@
 							</article>
 						<h2>Tablette graphique</h2>
 						<div class="row">
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/Mahoo.png" class="image fit thumb"><img src="images/Mahoo.png" alt="" /></a>
+								<h3>Maho</h3>
+								<p>Travail réalisé à la tablette graphique</p>
+							</article>
 							<article class="col-4 col-12-xsmall work-item">
 								<a href="images/Moi.png" class="image fit thumb"><img src="images/Moi.png" alt="" /></a>
 								<h3>Autoportrait</h3>
@@ -135,7 +87,7 @@
 								<h3>Alone</h3>
 								<p>Travail réalisé à la tablette graphique</p>
 							</article>
-							<article class="col-9 col-12-xsmall work-item">
+							<article class="col-10 col-12-xsmall work-item">
 								<a href="images/diable.png" class="image fit thumb"><img src="images/diable.png" alt="" /></a>
 								<h3>The Devil's bridge</h3>
 								<p>Travail réalisé à la tablette graphique avec modèle</p>
@@ -152,6 +104,41 @@
 							</article>
 						<h2>Autres</h2>
 						<div class="row">
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/Rue passante.png" class="image fit thumb"><img src="images/Rue passante.png" alt="" /></a>
+								<h3>Rue passante</h3>
+								<p>Travail réalisé au crayon de bois humidifié puis étalé à l'eau</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/E-girl.png" class="image fit thumb"><img src="images/E-girl.png" alt="" /></a>
+								<h3>E-girl</h3>
+								<p>Travail réalisé aux feutres à l'alcool</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/Carpe.png" class="image fit thumb"><img src="images/Carpe.png" alt="" /></a>
+								<h3>Carpe</h3>
+								<p>Travail réalisé sur papier aux crayons de bois gras et secs</p>
+							</article>
+							<article class="col-8 col-12-xsmall work-item">
+								<a href="images/Etang sauvage0003.png" class="image fit thumb"><img src="images/Etang sauvage0003.png" alt="" /></a>
+								<h3>Etang sauvage</h3>
+								<p>Travail réalisé inspiré du tableau "Les Nymphéas"</p>
+							</article>
+							<article class="col-4 col-12-xsmall work-item">
+								<a href="images/Colo.png" class="image fit thumb"><img src="images/Colo.png" alt="" /></a>
+								<h3>Homme à la peau mate</h3>
+								<p>Travail réalisé aux feutres à l'alcool avec modèle</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/Lucy0002.png" class="image fit thumb"><img src="images/Lucy0002.png" alt="" /></a>
+								<h3>Lucy</h3>
+								<p>Travail réalisé avec modèle aux feutres à l'alcool</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/Femme à la lumière.png" class="image fit thumb"><img src="images/Femme à la lumière.png" alt="" /></a>
+								<h3>Femme éclairée</h3>
+								<p>Travail réalisé avec modèle sur un papier cartonné noir</p>
+							</article>
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/aqueduc.jpg" class="image fit thumb"><img src="images/aqueduc.jpg" alt="" /></a>
 								<h3>Aqueduc</h3>
