--- a/index.html
+++ b/index.html
@@ -16,78 +16,31 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/Moi.avatar.png" alt="Avatar" /></a>
+					<a href="#" class="image avatar"><img src="images\Moi.2.png" alt="Avatar" /></a>
 					<h1><strong>Bonjour ! Je m'appelle Lucille George</strong>, je suis passionnée
-					par le dessin que ce soit sur papier ou sur support numérique. <br />
+					par le dessin que ce soit sur papier ou sur support numérique.
 					</h1>
 					</a>
 				</div>
 			</header>
 
 		<!-- Main -->
-			<div id="main">
+			<div id="main">	
 
 				<!-- One -->
 					<section id="one">
 						<header class="major">
 							<h2>Portfolio</h2>
 						</header>
-						<p>Actuellement en classe de 3ème je souhaite passer un bac STD2A afin de faire des études dans le domaine de l'art numérique.</p>
+						<p>Actuellement en classe de 2nde je souhaite passer un bac général comprenant la spécialité arts platisques anfin d'orienter mes études dans ce domaine.</p>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Travaux sélectionnés pour la présentation de la Joliverie</h2>
+						<h2>Je vous présente donc une petite partie de mon univers créatif...</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/image1.jpg" class="image fit thumb"><img src="images/image1.jpg" alt="" /></a>
-								<h3>Femme nue</h3>
-								<p>Travail réalisé au crayon de bois avec modèle</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Femme à la lumière.png" class="image fit thumb"><img src="images/Femme à la lumière.png" alt="" /></a>
-								<h3>Femme éclairée</h3>
-								<p>Travail réalisé avec modèle sur un papier cartonné noir</p>
-							</article>
 							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/Alone.png" class="image fit thumb"><img src="images/Alone.png" alt="" /></a>
-								<h3>Alone</h3>
-								<p>Travail réalisé à la tablette graphique</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Lucy0002.png" class="image fit thumb"><img src="images/Lucy0002.png" alt="" /></a>
-								<h3>Lucy</h3>
-								<p>Travail réalisé avec modèle aux feutres à l'alcool</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Colo.png" class="image fit thumb"><img src="images/Colo.png" alt="" /></a>
-								<h3>Homme à la peau mate</h3>
-								<p>Travail réalisé aux feutres à l'alcool avec modèle</p>
-							</article>
-							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/Etang sauvage0003.png" class="image fit thumb"><img src="images/Etang sauvage0003.png" alt="" /></a>
-								<h3>Etang sauvage</h3>
-								<p>Travail réalisé inspiré du tableau "Les Nymphéas"</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Carpe.png" class="image fit thumb"><img src="images/Carpe.png" alt="" /></a>
-								<h3>Carpe</h3>
-								<p>Travail réalisé sur papier aux crayonx de bois gras et secs</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/E-girl.png" class="image fit thumb"><img src="images/E-girl.png" alt="" /></a>
-								<h3>E-girl</h3>
-								<p>Travail réalisé aux feutres à l'alcool</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Rue passante.png" class="image fit thumb"><img src="images/Rue passante.png" alt="" /></a>
-								<h3>Rue passante</h3>
-								<p>Travail réalisé au crayon de bois humidifié puis étalé à l'eau</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/diable.png" class="image fit thumb"><img src="images/diable.png" alt="" /></a>
-								<h3>The Devil's bridge</h3>
-								<p>Travail réalisé à la tablette graphique avec modèle</p>
+								<a href="images\Mon Univers.png" class="image fit thumb"><img src="images\Mon Univers.png" alt="" /></a>
 							</article>
 						</div>
 						<h2>Corps dénudés</h2>
@@ -124,22 +77,90 @@
 							</article>
 						<h2>Tablette graphique</h2>
 						<div class="row">
-							<article class="col-4 col-12-xsmall work-item">
-								<a href="images/Moi.png" class="image fit thumb"><img src="images/Moi.png" alt="" /></a>
-								<h3>Autoportrait</h3>
-								<p>Travail réalisé à la tablette graphique</p>
-							</article>
 							<article class="col-8 col-12-xsmall work-item">
 								<a href="images/Alone.png" class="image fit thumb"><img src="images/Alone.png" alt="" /></a>
 								<h3>Alone</h3>
 								<p>Travail réalisé à la tablette graphique</p>
 							</article>
-							<article class="col-9 col-12-xsmall work-item">
+							<article class="col-4 col-5-xsmall work-item">
+								<a href="images\Meduse.PNG" class="image fit thumb"><img src="images\Meduse.PNG" alt="" /></a>
+								<h3>Méduse</h3>
+								<p>Travail réalisé à la tablette graphique</p>
+							</article>
+							<article class="col-12 col-15-xsmall work-item">
+								<a href="images\Nantes.png" class="image fit thumb"><img src="images\Nantes.png" alt="" /></a>
+								<h3>Nantes</h3>
+								<p>Travail réalisé à la tablette graphique</p>
+							</article>
+							<article class="col-4 col-5-xsmall work-item">
+								<a href="images\Matelot.png" class="image fit thumb"><img src="images\Matelot.png" alt="" /></a>
+								<h3>Matelot</h3>
+								<p>Travail réalisé à la tablette graphique</p>
+							</article>
+							<article class="col-8 col-11-xsmall work-item">
 								<a href="images/diable.png" class="image fit thumb"><img src="images/diable.png" alt="" /></a>
 								<h3>The Devil's bridge</h3>
 								<p>Travail réalisé à la tablette graphique avec modèle</p>
 							</article>
-						</div>
+						<h2>Photos</h2>
+						<div class="row">
+							<article class="col-5 col-7-xsmall work-item">
+								<a href="images\Bleu Klein.jpg" class="image fit thumb"><img src="images\Bleu Klein.jpg" alt="" /></a>
+								<h3>Bleu Klein</h3>
+								<p>Prise au Bassin des Lumières</p>
+							</article>
+							<article class="col-7 col-7-xsmall work-item">
+								<a href="images\Rosace.jpg" class="image fit thumb"><img src="images\Rosace.jpg" alt="" /></a>
+								<h3>Vitrail</h3>
+								<p>Prise à la Carrière des Lumières</p>
+							</article>
+							<article class="col-6 col-6-xsmall work-item">
+								<a href="images\Sagrada FAmilia.JPG" class="image fit thumb"><img src="images\Sagrada FAmilia.JPG" alt="" /></a>
+								<h3>Sagrada Familia</h3>
+								<p>Prise à la Sagrada Familia</p>
+							</article>
+							<article class="col-6 col-8-xsmall work-item">
+								<a href="images\Papillon.jpg" class="image fit thumb"><img src="images\Papillon.jpg" alt="" /></a>
+								<h3>Papillon</h3>
+								<p>Prise à la Serre aux Papillons (Vannes)</p>
+							</article>
+							<article class="col-12 col-8-xsmall work-item">
+								<a href="images\IMG_3278.jpg" class="image fit thumb"><img src="images\IMG_3278.jpg" alt="" /></a>
+								<h3>Fleur</h3>
+								<p>Prise lors d'une ballade en forêt</p>
+							</article>
+							<article class="col-5 col-8-xsmall work-item">
+								<a href="images\Trèfle 1.jpg" class="image fit thumb"><img src="images\Trèfle 1.jpg" alt="" /></a>
+								<h3>Parterre de trèfles</h3>
+								<p>Prise lors d'une ballade</p>
+							</article>
+							<article class="col-7 col-8-xsmall work-item">
+								<a href="images\Trèfle 2.jpg" class="image fit thumb"><img src="images\Trèfle 2.jpg" alt="" /></a>
+								<h3>Trèfles</h3>
+								<p>Prise lors d'une ballade</p>
+							</article>
+						<h2>Autres</h2>
+						<div class="row">
+							<article class="col-6 col-8-xsmall work-item">
+								<a href="images\Carpe.png" class="image fit thumb"><img src="images\Carpe.png" alt="" /></a>
+								<h3>Carpe</h3>
+								<p>Travail réalisé au crayon de bois</p>
+							</article>
+							<article class="col-6 col-8-xsmall work-item">
+								<a href="images\Femme à la lumière.png" class="image fit thumb"><img src="images\Femme à la lumière.png" alt="" /></a>
+								<h3>Femme à la lumière</h3>
+								<p>Travail réalisé au blanc sec</p>
+							</article>
+							<article class="col-6 col-8-xsmall work-item">
+								<a href="images\Plante.JPG" class="image fit thumb"><img src="images\Plante.JPG" alt="" /></a>
+								<h3>Plante</h3>
+								<p>Travail réalisé aux feutres à l'alcool avec sequins</p>
+							</article>
+							<article class="col-6 col-8-xsmall work-item">
+								<a href="images\Voyante0012.png" class="image fit thumb"><img src="images\Voyante0012.png" alt="" /></a>
+								<h3>Voyante</h3>
+								<p>Travail réalisé au crayon de bois</p>
+							</article>
 					</section>
 			</div>
 
