--- a/index.html
+++ b/index.html
@@ -83,81 +83,81 @@
 								<h3>Alone</h3>
 								<p>Travail réalisé à la tablette graphique</p>
 							</article>
-							<article class="col-4 col-5-xsmall work-item">
+							<article class="col-4 col-12-xsmall work-item img-fluid ">
 								<a href="images\Meduse.PNG" class="image fit thumb"><img src="images\Meduse.PNG" alt="" /></a>
 								<h3>Méduse</h3>
 								<p>Travail réalisé à la tablette graphique</p>
 							</article>
-							<article class="col-12 col-15-xsmall work-item">
+							<article class="col-12 col-12-xsmall work-item">
 								<a href="images\Nantes.png" class="image fit thumb"><img src="images\Nantes.png" alt="" /></a>
 								<h3>Nantes</h3>
 								<p>Travail réalisé à la tablette graphique</p>
 							</article>
-							<article class="col-4 col-5-xsmall work-item">
+							<article class="col-4 col-12-xsmall work-item">
 								<a href="images\Matelot.png" class="image fit thumb"><img src="images\Matelot.png" alt="" /></a>
 								<h3>Matelot</h3>
 								<p>Travail réalisé à la tablette graphique</p>
 							</article>
-							<article class="col-8 col-11-xsmall work-item">
+							<article class="col-8 col-12-xsmall work-item">
 								<a href="images/diable.png" class="image fit thumb"><img src="images/diable.png" alt="" /></a>
 								<h3>The Devil's bridge</h3>
 								<p>Travail réalisé à la tablette graphique avec modèle</p>
 							</article>
 						<h2>Photos</h2>
 						<div class="row">
-							<article class="col-5 col-7-xsmall work-item">
+							<article class="col-5 col-12-xsmall work-item">
 								<a href="images\Bleu Klein.jpg" class="image fit thumb"><img src="images\Bleu Klein.jpg" alt="" /></a>
 								<h3>Bleu Klein</h3>
 								<p>Prise au Bassin des Lumières</p>
 							</article>
-							<article class="col-7 col-7-xsmall work-item">
+							<article class="col-7 col-12-xsmall work-item">
 								<a href="images\Rosace.jpg" class="image fit thumb"><img src="images\Rosace.jpg" alt="" /></a>
 								<h3>Vitrail</h3>
 								<p>Prise à la Carrière des Lumières</p>
 							</article>
-							<article class="col-6 col-6-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images\Sagrada FAmilia.JPG" class="image fit thumb"><img src="images\Sagrada FAmilia.JPG" alt="" /></a>
 								<h3>Sagrada Familia</h3>
 								<p>Prise à la Sagrada Familia</p>
 							</article>
-							<article class="col-6 col-8-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images\Papillon.jpg" class="image fit thumb"><img src="images\Papillon.jpg" alt="" /></a>
 								<h3>Papillon</h3>
 								<p>Prise à la Serre aux Papillons (Vannes)</p>
 							</article>
-							<article class="col-12 col-8-xsmall work-item">
+							<article class="col-12 col-12-xsmall work-item">
 								<a href="images\IMG_3278.jpg" class="image fit thumb"><img src="images\IMG_3278.jpg" alt="" /></a>
 								<h3>Fleur</h3>
 								<p>Prise lors d'une ballade en forêt</p>
 							</article>
-							<article class="col-5 col-8-xsmall work-item">
+							<article class="col-5 col-12-xsmall work-item">
 								<a href="images\Trèfle 1.jpg" class="image fit thumb"><img src="images\Trèfle 1.jpg" alt="" /></a>
 								<h3>Parterre de trèfles</h3>
 								<p>Prise lors d'une ballade</p>
 							</article>
-							<article class="col-7 col-8-xsmall work-item">
+							<article class="col-7 col-12-xsmall work-item">
 								<a href="images\Trèfle 2.jpg" class="image fit thumb"><img src="images\Trèfle 2.jpg" alt="" /></a>
 								<h3>Trèfles</h3>
 								<p>Prise lors d'une ballade</p>
 							</article>
 						<h2>Autres</h2>
 						<div class="row">
-							<article class="col-6 col-8-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images\Carpe.png" class="image fit thumb"><img src="images\Carpe.png" alt="" /></a>
 								<h3>Carpe</h3>
 								<p>Travail réalisé au crayon de bois</p>
 							</article>
-							<article class="col-6 col-8-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images\Femme à la lumière.png" class="image fit thumb"><img src="images\Femme à la lumière.png" alt="" /></a>
 								<h3>Femme à la lumière</h3>
 								<p>Travail réalisé au blanc sec</p>
 							</article>
-							<article class="col-6 col-8-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images\Plante.JPG" class="image fit thumb"><img src="images\Plante.JPG" alt="" /></a>
 								<h3>Plante</h3>
 								<p>Travail réalisé aux feutres à l'alcool avec sequins</p>
 							</article>
-							<article class="col-6 col-8-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images\Voyante0012.png" class="image fit thumb"><img src="images\Voyante0012.png" alt="" /></a>
 								<h3>Voyante</h3>
 								<p>Travail réalisé au crayon de bois</p>
