--- a/index.html
+++ b/index.html
@@ -16,130 +16,168 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/Moi.avatar.png" alt="Avatar" /></a>
+					<a href="images\Avatar.PNG" class="image avatar"><img src="images\Avatar.PNG" alt="" /></a>
 					<h1><strong>Bonjour ! Je m'appelle Lucille George</strong>, je suis passionnée
-					par le dessin que ce soit sur papier ou sur support numérique. <br />
+					par tout ce qui est dans le domaine de la création et plus particulièrement l'art digital.
 					</h1>
 					</a>
 				</div>
 			</header>
 
 		<!-- Main -->
-			<div id="main">
+			<div id="main">	
 
 				<!-- One -->
 					<section id="one">
 						<header class="major">
 							<h2>Portfolio</h2>
 						</header>
-						<p>Actuellement en classe de 3ème je souhaite passer un bac STD2A afin de faire des études dans le domaine de l'art numérique.</p>
+						<p>Actuellement en classe de terminale générale avec spécialités LLCE et SES, je souhaite m'orienter vers des études de direction artistique en création visuelle et digitale.</p>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Travaux sélectionnés pour la présentation de la Joliverie</h2>
+						<h2>Voici donc une petite partie de mon univers créatif...</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/image1.jpg" class="image fit thumb"><img src="images/image1.jpg" alt="" /></a>
-								<h3>Femme nue</h3>
-								<p>Travail réalisé au crayon de bois avec modèle</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Femme à la lumière.png" class="image fit thumb"><img src="images/Femme à la lumière.png" alt="" /></a>
-								<h3>Femme éclairée</h3>
-								<p>Travail réalisé avec modèle sur un papier cartonné noir</p>
-							</article>
 							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/Alone.png" class="image fit thumb"><img src="images/Alone.png" alt="" /></a>
-								<h3>Alone</h3>
-								<p>Travail réalisé à la tablette graphique</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Lucy0002.png" class="image fit thumb"><img src="images/Lucy0002.png" alt="" /></a>
-								<h3>Lucy</h3>
-								<p>Travail réalisé avec modèle aux feutres à l'alcool</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Colo.png" class="image fit thumb"><img src="images/Colo.png" alt="" /></a>
-								<h3>Homme à la peau mate</h3>
-								<p>Travail réalisé aux feutres à l'alcool avec modèle</p>
-							</article>
-							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/Etang sauvage0003.png" class="image fit thumb"><img src="images/Etang sauvage0003.png" alt="" /></a>
-								<h3>Etang sauvage</h3>
-								<p>Travail réalisé inspiré du tableau "Les Nymphéas"</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Carpe.png" class="image fit thumb"><img src="images/Carpe.png" alt="" /></a>
-								<h3>Carpe</h3>
-								<p>Travail réalisé sur papier aux crayonx de bois gras et secs</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/E-girl.png" class="image fit thumb"><img src="images/E-girl.png" alt="" /></a>
-								<h3>E-girl</h3>
-								<p>Travail réalisé aux feutres à l'alcool</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Rue passante.png" class="image fit thumb"><img src="images/Rue passante.png" alt="" /></a>
-								<h3>Rue passante</h3>
-								<p>Travail réalisé au crayon de bois humidifié puis étalé à l'eau</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/diable.png" class="image fit thumb"><img src="images/diable.png" alt="" /></a>
-								<h3>The Devil's bridge</h3>
-								<p>Travail réalisé à la tablette graphique avec modèle</p>
+								<a href="images\Bannière.jpg" class="image fit thumb"><img src="images\Bannière.jpg" alt="" /></a>
 							</article>
 						</div>
-						<h2>Corps dénudés</h2>
+						<h2>Anatomie</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/femme nue de profil.jpg" class="image fit thumb"><img src="images/femme nue de profil.jpg" alt="" /></a>
-								<h3>Femme nue allongée de profil</h3>
-								<p>Travail réalisé au crayon de bois avec modèle</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/image2.jpg" class="image fit thumb"><img src="images/image2.jpg" alt="" /></a>
-								<h3>Femme nue allongée</h3>
-								<p>Travail réalisé au crayon de bois avec modèle</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/image0.jpg" class="image fit thumb"><img src="images/image0.jpg" alt="" /></a>
-								<h3>Buste femme nue</h3>
-								<p>Travail réalisé au crayon de bois avec modèle</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Femme nue acroupie.jpg" class="image fit thumb"><img src="images/Femme nue acroupie.jpg" alt="" /></a>
-								<h3>Femme nue acroupie</h3>
-								<p>Travail réalisé au crayon de bois avec modèle</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/image1.jpg" class="image fit thumb"><img src="images/image1.jpg" alt="" /></a>
-								<h3>Femme nue</h3>
-								<p>Travail réalisé au crayon de bois avec modèle</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Femme debout n2.jpg" class="image fit thumb"><img src="images/Femme debout n2.jpg" alt="" /></a>
+								<a href="images\Femme debout.jpg" class="image fit thumb"><img src="images\Femme debout.jpg" alt="" /></a>
 								<h3>Femme debout</h3>
-								<p>Travail réalisé au crayon de bois avec modèle</p>
+								<p>Dessin d'observation au crayon de bois - 10/01/21</p>
 							</article>
-						<h2>Tablette graphique</h2>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Femme éclairée.jpg" class="image fit thumb"><img src="images\Femme éclairée.jpg" alt="" /></a>
+								<h3>Femme éclairée</h3>
+								<p>Dessin d'observation à la craie sèche blanche - 12/09/21</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Femme allongée.jpg" class="image fit thumb"><img src="images\Femme allongée.jpg" alt="" /></a>
+								<h3>Femme allongée</h3>
+								<p>Dessin d'observation au crayon de bois - 10/01/21</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Planche homme complet.jpg" class="image fit thumb"><img src="images\Planche homme complet.jpg" alt="" /></a>
+								<h3>Planche homme</h3>
+								<p>Essais réalisés au crayon de bois - 03/24/22</p>
+							</article>
+						</div>	
+						<h2>Eau</h2>
 						<div class="row">
-							<article class="col-4 col-12-xsmall work-item">
-								<a href="images/Moi.png" class="image fit thumb"><img src="images/Moi.png" alt="" /></a>
-								<h3>Autoportrait</h3>
-								<p>Travail réalisé à la tablette graphique</p>
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images\Akrocéan.jpg" class="image fit thumb"><img src="images\Akrocéan.jpg" alt="" /></a>
+								<h3>Akrocéan</h3>
+								<p>Logo conçu avec Illustrator suite à une étude de marché que j'ai réalisée - 16/06/22</p>
+							</article>	
+							<article class="col-5 col-12-xsmall work-item">
+								<a href="images\Océan graphique.jpg" class="image fit thumb"><img src="images\Océan graphique.jpg" alt="" /></a>
+								<h3>Océan graphique</h3>
+								<p>Réalisé sur papier Canson bleu avec une craie sèche blanche - 24/07/23</p>
+							</article>	
+							<article class="col-7 col-12-xsmall work-item">
+								<a href="images\Médusa.JPG" class="image fit thumb"><img src="images\Médusa.JPG" alt="" /></a>
+								<h3>Médusa</h3>
+								<p>Réalisé sur Krita - 30/12/20</p>
+							</article>	
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images\Merlan bleu.jpg" class="image fit thumb"><img src="images\Merlan bleu.jpg" alt="" /></a>
+								<h3>Merlan Bleu</h3>
+								<p>Dessin d'observation au crayon de bois - 24/09/23</p>
 							</article>
-							<article class="col-8 col-12-xsmall work-item">
-								<a href="images/Alone.png" class="image fit thumb"><img src="images/Alone.png" alt="" /></a>
-								<h3>Alone</h3>
-								<p>Travail réalisé à la tablette graphique</p>
+						</div>	
+						<h2>Nature</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Rouge-gorge perché.jpg" class="image fit thumb"><img src="images\Rouge-gorge perché.jpg" alt="" /></a>
+								<h3>Rouge-gorge perché</h3>
+								<p>Photo prise lors d'une balade - 11/12/22</p>
 							</article>
-							<article class="col-9 col-12-xsmall work-item">
-								<a href="images/diable.png" class="image fit thumb"><img src="images/diable.png" alt="" /></a>
-								<h3>The Devil's bridge</h3>
-								<p>Travail réalisé à la tablette graphique avec modèle</p>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Rouge-gorge.jpg" class="image fit thumb"><img src="images\Rouge-gorge.jpg" alt="" /></a>
+								<h3>Rouge-gorge</h3>
+								<p>Photo prise lors d'une balade - 11/12/22</p>
 							</article>
-						</div>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Punaise.jpg" class="image fit thumb"><img src="images\Punaise.jpg" alt="" /></a>
+								<h3>Punaise des bois</h3>
+								<p>Photo prise lors d'une balade - 10/07/23</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Libellule.jpg" class="image fit thumb"><img src="images\Libellule.jpg" alt="" /></a>
+								<h3>Libellule</h3>
+								<p>Photo prise lors d'une balade - 10/07/23</p>
+							</article>
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images\Rapace.jpg" class="image fit thumb"><img src="images\Rapace.jpg" alt="" /></a>
+								<h3>Rapace</h3>
+								<p>Photo prise lors d'une balade - 11/12/22</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Papillon .jpg" class="image fit thumb"><img src="images\Papillon .jpg" alt="" /></a>
+								<h3>Papillon</h3>
+								<p>Photo prise lors d'une balade - 10/07/23</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Fleur.jpg" class="image fit thumb"><img src="images\Fleur.jpg" alt="" /></a>
+								<h3>Fleur</h3>
+								<p>Photo prise lors d'une balade - 22/04/22</p>
+							</article>
+						</div>	
+						<h2>Couleurs explosives</h2>
+						<div class="row">
+							<article class="col-5 col-12-xsmall work-item">
+								<a href="images\Muguet coloré.jpg" class="image fit thumb"><img src="images\Muguet coloré.jpg" alt="" /></a>
+								<h3>Muguet</h3>
+								<p>Réalisé avec de la gouache et de l'aquarelle - 04/08/22</p>
+							</article>
+							<article class="col-7 col-12-xsmall work-item">
+								<a href="images\Bleu de Klein.JPG" class="image fit thumb"><img src="images\Bleu de Klein.JPG" alt="" /></a>
+								<h3>Bleu de Klein</h3>
+								<p>Photo prise au Bassin des Lumières - 07/08/21</p>
+							</article>
+							<article class="col-5 col-12-xsmall work-item">
+								<a href="images\Sagrada Familia.JPG" class="image fit thumb"><img src="images\Sagrada Familia.JPG" alt="" /></a>
+								<h3>Sagrada Familia</h3>
+								<p>Photo prise à la Sagrada Familia - 04/07/19</p>
+							</article>
+							<article class="col-7 col-12-xsmall work-item">
+								<a href="images\Nantes.JPG" class="image fit thumb"><img src="images\Nantes.JPG" alt="" /></a>
+								<h3>Nantes</h3>
+								<p>Réalisé avec Krita - 08/08/22</p>
+							</article>
+							
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images\Mains.jpg" class="image fit thumb"><img src="images\Mains.jpg" alt="" /></a>
+								<h3>Mains  </h3>
+								<p>Réalisé aux feutres à l'alcool, inspiré de la Création d'Adam de Michel-Ange - 28/06/22</p>
+							</article>
+						</div>	
+						<h2>Créations digitales</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Masque Morphée.JPG" class="image fit thumb"><img src="images\Masque Morphée.JPG" alt="" /></a>
+								<h3>Masque Morphée</h3>
+								<p>Réalisé avec Procreate - 3ème place du concours "Dévoile-nous ton masque" organisé par e-artsup! - 02/03/23</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Escargot.JPG" class="image fit thumb"><img src="images\Escargot.JPG" alt="" /></a>
+								<h3>Escargot</h3>
+								<p>Réalisé avec Procreate - 22/04/23</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Loutre imaginaire.PNG" class="image fit thumb"><img src="images\Loutre imaginaire.PNG" alt="" /></a>
+								<h3>Loutre fantastique</h3>
+								<p>Réalisé avec Illustrator - 04/04/22</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images\Méditerranée.jpg" class="image fit thumb"><img src="images\Méditerranée.jpg" alt="" /></a>
+								<h3>Méditerranée</h3>
+								<p>Réalisé avec Procreate - 25/07/23</p>
+							</article>
 					</section>
 			</div>
 
